Corrected horizontal scrolling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1808,7 +1808,7 @@ body.mobile .navbar-toggler {
     }
     img.header-mask {
         bottom: -2px !important;
-        left: 1px;
+        left: 0px;
     }
     .video-container {
         display: block !important;
